@@ -16,4 +16,5 @@ Bug fixes:
 - #1485: fix metadata's page title
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
--
+- Made 'Upgrade document instances to become flexible' step to work before
+  importing/reinstalling 'CPS Default Site' profile.
